overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 body {
-  @apply overflow-hidden m-0;
+  @apply overflow-x-hidden m-0;
 }
